# curo

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  Makefile  README.md  analysis_options.yaml  jest.config.js  mkdocs.yml  package-lock.json  package.json  pubspec.yaml  pyproject.toml  tsconfig.json
.github/workflows/: dart_ci.yml  deploy_docs.yml  typescript-ci.yml
doc/site/: changelog.md  index.md
example/: example.dart  example.md  example.ts  example_02.dart  example_03.dart  example_04.dart  example_05.dart  example_06.dart  example_07.dart  example_08.dart  example_09.dart  example_10.dart  example_11.dart  reg-z-example.ts  schedule.dart
lib/: curo.dart
lib/src/: calculator.dart  calculator_helper.dart  calculator_schedule.dart  enums.dart  exceptions.dart  series.dart  utils.dart
src/: index.ts
src/compliance/: reg-z-wrapper.test.ts  reg-z-wrapper.ts
src/core/: calculator.ts  solve-cashflow.ts  solve-nfv.ts  solve-root.ts  unsolvable-exception.ts
src/daycount/: convention.ts  day-count-factor.ts  day-count-origin.ts  us-30-360.test.ts  us-30-360.ts
test/: calculator_helper_amortise_interest_test.dart  calculator_helper_assign_factors_test.dart  calculator_helper_brent_solve_test.dart  calculator_helper_build_profile_test.dart  calculator_helper_nfv_test.dart  calculator_helper_sort_cash_flows_test.dart  calculator_helper_update_unknowns_test.dart  calculator_schedule_test.dart  calculator_solve_rate_test.dart  calculator_solve_value_test.dart  calculator_test.dart  enums_test.dart  exceptions_test.dart  series_test.dart  utils_test.dart
(+107 files in other folders)
